# PROJECT-MAHABHARAT

./: .env  .gitignore  README.md  app.py  cmd.txt  example.py  gemini_handler.py  insert_wisdom.py  insertpravachanas.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt
mahabharata-wisdom/src/: App.css  App.js  ThoughtSlogan.jsx
mahabharata-wisdom/src/services/: api.js
mahabharata_wisdom/: package-lock.json  package.json
mahabharata_wisdom/src/: index.css
mahabharata_wisdom/src/pages/: Home.js
routes/: __init__.py  admin_routes.py  dashboard.py  login.py  wisdom.py  wisdom_routes.py
static/css/: admin.css  login.css  style.css  wisdom.css
static/js/: app.js
templates/: about.html  admin_login.html  admin_panel.html  admin_pravachanas.html  base.html  dashboard.html  explore.html  feeling_manager.html  index.html  login.html  pravachanas.html  settings.html  signup.html  whats_new.html  wisdom.html
